@@ -14390,4 +14390,7 @@ Failed: assertion expected after (?( at offset 3
         End
 ------------------------------------------------------------------
 
+"(?<=((?2))((?1)))"
+Failed: lookbehind assertion is not fixed length at offset 17
+
 /-- End of testinput2 --/
